--- a/realtime-speech-translator.html
+++ b/realtime-speech-translator.html
@@ -564,7 +564,7 @@
                         <div class="usage-steps">
                             <span class="usage-step">「AIモデルを準備する」ボタンをクリック</span>
                             <span class="usage-arrow">→</span>
-                            <span class="usage-step">AIモデルをダウンロード</span>
+                            <span class="usage-step">AIモデルのダウンロード</span>
                         </div>
                         <p style="margin-top: 6px; font-size: 0.75rem; color: #d97706;">※ 初回利用時は数分かかる場合があります</p>
                     </div>
